--- a/cron/pom.xml
+++ b/cron/pom.xml
@@ -44,7 +44,7 @@
 
         <dependency>
             <groupId>org.jboss.capedwarf.shared</groupId>
-            <artifactId>capedwarf-shared</artifactId>
+            <artifactId>capedwarf-integration</artifactId>
         </dependency>
 
         <dependency>
