--- a/cluster-tests/pom.xml
+++ b/cluster-tests/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>org.jboss.capedwarf.blue</groupId>
         <artifactId>capedwarf-build</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -34,7 +34,7 @@
         </dependency>
 
         <dependency>
-            <groupId>org.wildfly</groupId>
+            <groupId>org.wildfly.arquillian</groupId>
             <artifactId>wildfly-arquillian-container-remote</artifactId>
             <scope>test</scope>
         </dependency>
