--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     </parent>
     <groupId>org.jboss.capedwarf.blue</groupId>
     <artifactId>capedwarf-build</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>CapeDwarf Blue</name>
     <url>http://www.jboss.org/capedwarf</url>
@@ -53,45 +53,44 @@
 
     <properties>
         <!-- Shared -->
-        <version.org.jboss.capedwarf.shared>2.0.0-SNAPSHOT</version.org.jboss.capedwarf.shared>
+        <version.org.jboss.capedwarf.shared>3.0.0-SNAPSHOT</version.org.jboss.capedwarf.shared>
         <!-- External -->
         <version.com.google.gae.api>1.9.18</version.com.google.gae.api>
         <version.com.google.gae.tools>1.9.18</version.com.google.gae.tools>
         <!-- We do not use 16.0.1, due to MapReduce, which needs 15.x -->
-        <version.com.google.guava>15.0</version.com.google.guava>
+        <version.com.google.guava>18.0</version.com.google.guava>
         <version.org.apache.commons-collections>3.2.1</version.org.apache.commons-collections>
         <version.org.apache.commons-lang>2.6</version.org.apache.commons-lang>
-        <version.org.apache.log4j>1.2.17</version.org.apache.log4j>
-        <version.org.apache.lucene>3.6.2</version.org.apache.lucene>
-        <version.org.apache.velocity>1.6.3</version.org.apache.velocity>
+        <version.org.apache.log4j>1.2.16</version.org.apache.log4j>
+        <version.org.apache.lucene>4.10.4</version.org.apache.lucene>
+        <version.org.apache.velocity>1.7</version.org.apache.velocity>
         <version.org.apache.velocity-tool>2.0</version.org.apache.velocity-tool>
         <version.org.bouncycastle>1.50</version.org.bouncycastle>
-        <version.org.jboss.logging>3.1.4.GA</version.org.jboss.logging>
-        <version.org.jboss.modules.jboss-modules>1.3.3.Final</version.org.jboss.modules.jboss-modules>
-        <version.org.jboss.vfs>3.2.5.Final</version.org.jboss.vfs>
-        <version.org.jboss.jboss-common-core>2.2.22.GA</version.org.jboss.jboss-common-core>
+        <version.org.jboss.logging>3.2.1.Final</version.org.jboss.logging>
+        <version.org.jboss.modules.jboss-modules>1.4.2.Final</version.org.jboss.modules.jboss-modules>
+        <version.org.jboss.vfs>3.2.9.Final</version.org.jboss.vfs>
+        <version.org.jboss.jboss-common-core>2.5.0.Beta1</version.org.jboss.jboss-common-core>
 
         <version.org.jivesoftware.smack>3.1.0</version.org.jivesoftware.smack>
-        <version.org.picketlink>2.1.10.Final</version.org.picketlink>
         <version.org.picketlink.social>2.5.2.Final</version.org.picketlink.social>
         <version.javassist>3.18.1-GA</version.javassist>
         <version.javax.jpa2>1.0.0.Final</version.javax.jpa2>
-        <version.javax.mail>1.5.1</version.javax.mail>
+        <version.javax.mail>1.5.2</version.javax.mail>
         <version.javax.enterprise>1.1</version.javax.enterprise>
         <version.org.jboss.spec.javax.ejb.jboss-ejb-api_3.2_spec>1.0.0.Final</version.org.jboss.spec.javax.ejb.jboss-ejb-api_3.2_spec>
         <version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>1.0.0.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>
         <version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.1_spec>1.0.0.Final</version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.1_spec>
         <version.org.jboss.spec.javax.websockets>1.0.0.Final</version.org.jboss.spec.javax.websockets>
-        <version.org.hibernate.search>4.5.1.Final</version.org.hibernate.search>
-        <version.org.marshalling>1.4.9.Final</version.org.marshalling>
-        <version.org.infinispan>6.0.2.Final</version.org.infinispan>
+        <version.org.hibernate.search>5.1.1.Final</version.org.hibernate.search>
+        <version.org.marshalling>1.4.10.Final</version.org.marshalling>
+        <version.org.infinispan>7.2.0.Beta1</version.org.infinispan>
         <version.org.wildfly.mail-ra>1.0.0.Alpha2</version.org.wildfly.mail-ra>
         <version.net.jcip>1.0</version.net.jcip>
         <version.metainf>1.1</version.metainf>
-        <version.org.apache.httpcomponents>4.3.1</version.org.apache.httpcomponents>
+        <version.org.apache.httpcomponents>4.3.6</version.org.apache.httpcomponents>
         <version.org.xerial.sqlite>3.7.2</version.org.xerial.sqlite>
         <version.org.codehaus.jackson>1.9.13</version.org.codehaus.jackson>
-        <version.io.undertow>1.1.0.Final</version.io.undertow>
+        <version.io.undertow>1.2.0.Beta10</version.io.undertow>
         <version.org.quartz>2.2.1</version.org.quartz>
         <!-- Antlr -->
         <version.antlr>3.1</version.antlr>
@@ -103,8 +102,9 @@
         <version.org.datanucleus.jdo>3.0.1</version.org.datanucleus.jdo>
         <!-- Testing -->
         <version.junit>4.11</version.junit>
-        <version.arquillian>1.1.5.Final</version.arquillian>
-        <version.jboss.wildfly>8.2.0.Final</version.jboss.wildfly>
+        <version.arquillian>1.1.7.Final</version.arquillian>
+        <version.org.wildfly.arquillian>1.0.0.Alpha5</version.org.wildfly.arquillian>
+        <version.jboss.wildfly>9.0.0.Beta2</version.jboss.wildfly>
         <version.org.jboss.xnio>3.3.0.Final</version.org.jboss.xnio>
         <version.arquillian.gae>1.0.0.Beta10</version.arquillian.gae>
         <version.jboss.maven.transformer>1.0.0.Beta5</version.jboss.maven.transformer>
@@ -127,7 +127,7 @@
         <!-- Testing Objectify -->
         <version.objectify>4.0rc2</version.objectify>
         <!-- Testing REST -->
-        <version.org.jboss.resteasy>3.0.10.Final</version.org.jboss.resteasy>
+        <version.org.jboss.resteasy>3.0.11.Final</version.org.jboss.resteasy>
         <!-- Build configuration -->
         <version.datanucleus.plugin>3.1.3</version.datanucleus.plugin>
         <version.surefire.plugin>2.12.4</version.surefire.plugin>
@@ -519,12 +519,6 @@
 
             <dependency>
                 <groupId>org.picketlink</groupId>
-                <artifactId>picketlink-core</artifactId>
-                <version>${version.org.picketlink}</version>
-            </dependency>
-
-            <dependency>
-                <groupId>org.picketlink</groupId>
                 <artifactId>picketlink-social</artifactId>
                 <version>${version.org.picketlink.social}</version>
             </dependency>
@@ -620,7 +614,13 @@
 
             <dependency>
                 <groupId>org.apache.lucene</groupId>
-                <artifactId>lucene-analyzers</artifactId>
+                <artifactId>lucene-analyzers-common</artifactId>
+                <version>${version.org.apache.lucene}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.lucene</groupId>
+                <artifactId>lucene-queryparser</artifactId>
                 <version>${version.org.apache.lucene}</version>
             </dependency>
 
@@ -875,9 +875,9 @@
             </dependency>
 
             <dependency>
-                <groupId>org.wildfly</groupId>
+                <groupId>org.wildfly.arquillian</groupId>
                 <artifactId>wildfly-arquillian-container-remote</artifactId>
-                <version>${version.jboss.wildfly}</version>
+                <version>${version.org.wildfly.arquillian}</version>
                 <scope>test</scope>
             </dependency>
 
@@ -1147,7 +1147,7 @@
             </build>
             <dependencies>
                 <dependency>
-                    <groupId>org.wildfly</groupId>
+                    <groupId>org.wildfly.arquillian</groupId>
                     <artifactId>wildfly-arquillian-container-remote</artifactId>
                     <scope>test</scope>
                     <exclusions>
