--- a/prospectivesearch/pom.xml
+++ b/prospectivesearch/pom.xml
@@ -25,7 +25,7 @@
     <parent>
         <groupId>org.jboss.capedwarf.blue</groupId>
         <artifactId>capedwarf-build</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -54,7 +54,12 @@
 
         <dependency>
             <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-analyzers</artifactId>
+            <artifactId>lucene-analyzers-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queryparser</artifactId>
         </dependency>
 
         <dependency>
