--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,8 @@
         <!-- Shared -->
         <version.org.jboss.capedwarf.shared>3.0.0-SNAPSHOT</version.org.jboss.capedwarf.shared>
         <!-- External -->
-        <version.com.google.gae.api>1.9.20</version.com.google.gae.api>
-        <version.com.google.gae.tools>1.9.20</version.com.google.gae.tools>
+        <version.com.google.gae.api>1.9.21</version.com.google.gae.api>
+        <version.com.google.gae.tools>1.9.21</version.com.google.gae.tools>
         <!-- We do not use 16.0.1, due to MapReduce, which needs 15.x -->
         <version.com.google.guava>18.0</version.com.google.guava>
         <version.org.apache.commons-collections>3.2.1</version.org.apache.commons-collections>
@@ -67,7 +67,7 @@
         <version.org.apache.velocity-tool>2.0</version.org.apache.velocity-tool>
         <version.org.bouncycastle>1.50</version.org.bouncycastle>
         <version.org.jboss.logging>3.2.1.Final</version.org.jboss.logging>
-        <version.org.jboss.modules.jboss-modules>1.4.2.Final</version.org.jboss.modules.jboss-modules>
+        <version.org.jboss.modules.jboss-modules>1.4.3.Final</version.org.jboss.modules.jboss-modules>
         <version.org.jboss.vfs>3.2.9.Final</version.org.jboss.vfs>
         <version.org.jboss.jboss-common-core>2.5.0.Beta1</version.org.jboss.jboss-common-core>
 
@@ -75,26 +75,26 @@
         <version.org.picketlink.social>2.5.2.Final</version.org.picketlink.social>
         <version.javassist>3.18.1-GA</version.javassist>
         <version.javax.jpa2>1.0.0.Final</version.javax.jpa2>
-        <version.javax.mail>1.5.2</version.javax.mail>
-        <version.javax.enterprise>1.1</version.javax.enterprise>
+        <version.javax.mail>1.5.3</version.javax.mail>
+        <version.javax.enterprise>1.2</version.javax.enterprise>
         <version.org.jboss.spec.javax.ejb.jboss-ejb-api_3.2_spec>1.0.0.Final</version.org.jboss.spec.javax.ejb.jboss-ejb-api_3.2_spec>
         <version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>1.0.0.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>
         <version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.1_spec>1.0.0.Final</version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.1_spec>
         <version.org.jboss.spec.javax.websockets>1.0.0.Final</version.org.jboss.spec.javax.websockets>
-        <version.org.hibernate.search>5.1.2.Final</version.org.hibernate.search>
+        <version.org.hibernate.search>5.2.0.Final</version.org.hibernate.search>
         <version.org.marshalling>1.4.10.Final</version.org.marshalling>
-        <version.org.infinispan>7.1.1.Final</version.org.infinispan>
+        <version.org.infinispan>7.2.2.Final</version.org.infinispan>
         <version.org.wildfly.mail-ra>1.0.0.Alpha2</version.org.wildfly.mail-ra>
         <version.net.jcip>1.0</version.net.jcip>
         <version.metainf>1.1</version.metainf>
         <version.org.apache.httpcomponents>4.3.6</version.org.apache.httpcomponents>
         <version.org.xerial.sqlite>3.7.2</version.org.xerial.sqlite>
         <version.org.codehaus.jackson>1.9.13</version.org.codehaus.jackson>
-        <version.io.undertow>1.2.0.Beta10</version.io.undertow>
+        <version.io.undertow>1.2.7.Final</version.io.undertow>
         <version.org.quartz>2.2.1</version.org.quartz>
         <!-- Antlr -->
-        <version.antlr>3.1</version.antlr>
-        <version.antlr.plugin>3.1.3-1</version.antlr.plugin>
+        <version.antlr>3.4</version.antlr>
+        <version.antlr.plugin>3.4</version.antlr.plugin>
         <!-- DataNucleus -->
         <version.org.datanucleus>3.1.3</version.org.datanucleus>
         <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
@@ -102,8 +102,8 @@
         <version.org.datanucleus.jdo>3.0.1</version.org.datanucleus.jdo>
         <!-- Testing -->
         <version.junit>4.11</version.junit>
-        <version.arquillian>1.1.7.Final</version.arquillian>
-        <version.org.wildfly.arquillian>1.0.0.Alpha5</version.org.wildfly.arquillian>
+        <version.arquillian>1.1.8.Final</version.arquillian>
+        <version.org.wildfly.arquillian>1.0.0.CR1</version.org.wildfly.arquillian>
         <version.org.jboss.xnio>3.3.0.Final</version.org.jboss.xnio>
         <version.arquillian.gae>1.0.0.Beta10</version.arquillian.gae>
         <version.jboss.maven.transformer>1.0.0.Beta5</version.jboss.maven.transformer>
@@ -505,6 +505,12 @@
                 <groupId>org.jboss.maven.plugins</groupId>
                 <artifactId>maven-transformer-plugin</artifactId>
                 <version>${version.jboss.maven.transformer}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.sonatype.sisu</groupId>
+                        <artifactId>sisu-guava</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
 
             <!-- Common code -->
