--- a/pom.xml
+++ b/pom.xml
@@ -55,8 +55,8 @@
         <!-- Shared -->
         <version.org.jboss.capedwarf.shared>2.0.0-SNAPSHOT</version.org.jboss.capedwarf.shared>
         <!-- External -->
-        <version.com.google.gae.api>1.9.18</version.com.google.gae.api>
-        <version.com.google.gae.tools>1.9.18</version.com.google.gae.tools>
+        <version.com.google.gae.api>1.9.23</version.com.google.gae.api>
+        <version.com.google.gae.tools>1.9.23</version.com.google.gae.tools>
         <!-- We do not use 16.0.1, due to MapReduce, which needs 15.x -->
         <version.com.google.guava>15.0</version.com.google.guava>
         <version.org.apache.commons-collections>3.2.1</version.org.apache.commons-collections>
@@ -94,8 +94,8 @@
         <version.io.undertow>1.1.0.Final</version.io.undertow>
         <version.org.quartz>2.2.1</version.org.quartz>
         <!-- Antlr -->
-        <version.antlr>3.1</version.antlr>
-        <version.antlr.plugin>3.1.3-1</version.antlr.plugin>
+        <version.antlr>3.4</version.antlr>
+        <version.antlr.plugin>3.4</version.antlr.plugin>
         <!-- DataNucleus -->
         <version.org.datanucleus>3.1.3</version.org.datanucleus>
         <version.org.datanucleus.jta>1.1.1</version.org.datanucleus.jta>
@@ -514,7 +514,6 @@
                 <groupId>com.google.guava</groupId>
                 <artifactId>guava</artifactId>
                 <version>${version.com.google.guava}</version>
-                <scope>provided</scope>
             </dependency>
 
             <dependency>
