--- a/pom.xml
+++ b/pom.xml
@@ -85,7 +85,7 @@
         <version.org.hibernate.search>4.5.1.Final</version.org.hibernate.search>
         <version.org.marshalling>1.4.9.Final</version.org.marshalling>
         <version.org.infinispan>6.0.2.Final</version.org.infinispan>
-        <version.org.wildfly.mail-ra>1.0.0.Alpha2</version.org.wildfly.mail-ra>
+        <version.org.wildfly.mail-ra>1.0.0.Final</version.org.wildfly.mail-ra>
         <version.net.jcip>1.0</version.net.jcip>
         <version.metainf>1.6</version.metainf>
         <version.org.apache.httpcomponents>4.3.1</version.org.apache.httpcomponents>
